fix: align summary row arrows

--- a/sass/themes/okc/overrides.scss
+++ b/sass/themes/okc/overrides.scss
@@ -188,9 +188,10 @@ section.content .desktop {
     }
 
     .back-button-label {
-      font-size: 0.8em;
+      font-size: $font-size-normal;
       font-weight: $font-weight-normal;
       margin-left: 0.15em;
+      padding-top: 3px;
     }
   }
 }
